tests/ui-nightly/inline_assert_size_eq_failed.stderr
error[E0254]: the name `static_assertions` is defined multiple times
 --> tests/ui-stable/inline_assert_size_eq_failed.rs:5:5
  |
3 | extern crate static_assertions;
  | ------------------------------- previous import of the extern crate `static_assertions` here
4 | use zerocopy_derive::*;
5 | use static_assertions;
  |     ^^^^^^^^^^^^^^^^^ `static_assertions` reimported here
  |
  = note: `static_assertions` must be defined only once in the type namespace of this module

warning: type `test_size_neq_struct` should have an upper camel case name
 --> tests/ui-stable/inline_assert_size_eq_failed.rs:8:8
  |
8 | struct test_size_neq_struct {
  |        ^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `TestSizeNeqStruct`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui-stable/inline_assert_size_eq_failed.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui-stable/inline_assert_size_eq_failed.rs`
